<resources>
    <string name="app_name">Practica2</string>
    <string name="btn_add">Add</string>
    <string name="btn_putImage">Selected Image</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="tv_team">Team</string>
    <string name="tv_conference">Conference</string>
    <string name="tv_division">Division</string>
    <string name="tv_titles">Titles</string>
    <string name="tv_withoutRegisters">Without registers</string>
</resources>